<resources>
    <string name="app_name">Focus List</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="email_verified">Email Verified</string>
    <string name="email_not_verified">Email not Verified</string>
    <string name="resend">Resend</string>
    <string name="settings">Settings</string>
    <string name="todo_list">Todo List</string>
    <string name="todo_add">Add Todo</string>
    <string name="todo">Todo</string>
    <string name="todo_title">Todo Title</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="todo_update">Update Todo</string>
    <string name="reward">Reward</string>
    <string name="timer">Timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="timer_log">Timer Log</string>
    <string name="status">Status</string>
    <string name="reward_add">Add Reward</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="reward_update">Update Reward</string>
    <string name="reward_detail">Reward Detail</string>
    <string name="edit">Edit</string>
    <string name="duration_minutes">Duration (Minutes)</string>
    <string name="todo_detail">Detail Todo</string>
    <string name="start_timer">Start Timer</string>
    <string name="set_duration">Set Duration</string>
    <string name="MPD_action_done">Done</string>
    <string name="MPD_action_cancel">Cancel</string>
    <string name="MPD_male">Male</string>
    <string name="MPD_female">Female</string>
    <string name="MPD_empty_message">Value can\'t be empty</string>
    <string name="MPD_incorrect_message">Please select correct value</string>
    <string name="select_reward">Select Reward</string>
</resources>