<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="rewardViewModel"
            type="id.ac.ui.cs.mobileprogramming.azharaiz.focuslist.viewmodels.RewardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.RewardUpdateFragment">

        <TextView
            android:id="@+id/rewardUpdateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/reward_update"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/rewardUpdateTitle">

            <EditText
                android:id="@+id/inputRewardUpdateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="Reward Title"
                android:backgroundTint="@color/main"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:text="@={rewardViewModel.rewardTitle}" />

            <EditText
                android:id="@+id/inputRewardUpdateDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Description"
                android:backgroundTint="@color/main"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="4"
                android:text="@={rewardViewModel.rewardDescription}" />
        </LinearLayout>

        <Button
            android:id="@+id/btnUpdateReward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_default"
            android:text="@string/update"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btnDeleteReward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnDeleteReward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_danger"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
